// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pages Contacts should renders correctly with contacts and fetching 1`] = `
<ForwardRef(View)
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
    }
  }
>
  <Navbar
    onSearchTextChanged={[Function]}
  />
  <FlatList
    ListFooterComponent={[Function]}
    ListHeaderComponent={[Function]}
    data={
      Array [
        Object {
          "first_name": "Theo",
          "last_name": "Math",
          "updated_at": "1991-12-17",
        },
        Object {
          "first_name": "Ines",
          "last_name": "Bode",
          "updated_at": "2018-02-01",
        },
      ]
    }
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    keyboardDismissMode="on-drag"
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReached={[Function]}
    onEndReachedThreshold={0.5}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</ForwardRef(View)>
`;

exports[`Pages Contacts should renders correctly with contacts and not fetching 1`] = `
<ForwardRef(View)
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
    }
  }
>
  <Navbar
    onSearchTextChanged={[Function]}
  />
  <FlatList
    ListFooterComponent={[Function]}
    ListHeaderComponent={[Function]}
    data={
      Array [
        Object {
          "first_name": "Theo",
          "last_name": "Math",
          "updated_at": "1991-12-17",
        },
        Object {
          "first_name": "Ines",
          "last_name": "Bode",
          "updated_at": "2018-02-01",
        },
      ]
    }
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    keyboardDismissMode="on-drag"
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReached={[Function]}
    onEndReachedThreshold={0.5}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</ForwardRef(View)>
`;

exports[`Pages Contacts should renders correctly without contacts (even in the db) and not fetching 1`] = `
<ForwardRef(View)
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
    }
  }
>
  <Navbar
    onSearchTextChanged={[Function]}
  />
  <EmptyActivity
    image={1}
    title="To add your first contact, use the “+” button below."
  />
</ForwardRef(View)>
`;

exports[`Pages Contacts should renders correctly without contacts and fetching 1`] = `
<ForwardRef(View)
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
    }
  }
>
  <Navbar
    onSearchTextChanged={[Function]}
  />
  <FlatList
    ListFooterComponent={[Function]}
    ListHeaderComponent={[Function]}
    data={Array []}
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    keyboardDismissMode="on-drag"
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReached={[Function]}
    onEndReachedThreshold={0.5}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</ForwardRef(View)>
`;
